finish api category
