# golang/module/category/entities/cate_create.go
@@ -2,8 +2,8 @@ package entities
 
 type CateCreate struct {
 	Name  string `json:"name" gorm:"column:Name"`
-	Desc  string `json:"desc" gorm:"column:Desc"`
-	Image string `json:"image" gorm:"column:Image"`
+	Desc  string `json:"desc" gorm:"column:Desc;default:''"`
+	Image string `json:"image" gorm:"column:Image;default:''"`
 }
 
 func (CateCreate) TableName() string {
