# golang/module/category/entities/cate_update.go
@@ -2,9 +2,9 @@ package entities
 
 type CateUpdate struct {
 	Name   string `json:"name" gorm:"column:Name"`
-	Desc   string `json:"desc" gorm:"column:Desc"`
-	Image  string `json:"image" gorm:"column:Image"`
-	Status string `json:"status" gorm:"column:Status"`
+	Desc   string `json:"desc" gorm:"column:Desc;default:''"`
+	Image  string `json:"image" gorm:"column:Image;default:''"`
+	Status string `json:"status" gorm:"column:Status;default:Normal"`
 }
 
 func (CateUpdate) TableName() string {
